--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,5 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
+	
+	<!-- ContextLoaderListener 설정 -->
+		<listener>
+			<listener-class>com.mycompany.web.contextlistener.ContextLoaderListener</listener-class>
+		</listener>
+	<!-- ContextLoaderListener 끝 -->
+	
+	<!-- Context-parameter 설정 -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+  		<param-value>/WEB-INF/applicationContext.xml</param-value>
+	</context-param>
+	<!-- Context-parameter 끝 -->
+	
+	<!-- CharacterEncodingFilter 설정 -->
+	<filter>
+		<filter-name>characterEncodingFilter</filter-name>
+		<filter-class>com.mycompany.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>characterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern> <!-- 모든 소스는 이 필터를 거쳐서 가야한다는 뜻 -->
+	</filter-mapping>
+	<!-- CharacterEncodingFilter 끝 -->
 
 	<!-- DispatcherServlet1 설정 -->
 	<servlet>
@@ -65,4 +93,40 @@
 		<url-pattern>/dispatcher5</url-pattern>
 	</servlet-mapping>
 	<!-- DispatcherServlet5 끝 -->
+	
+	<!-- DispatcherServlet6 설정 -->
+	<servlet>
+		<servlet-name>dispatcher6</servlet-name>
+		<servlet-class>com.mycompany.web.servlet.DispatcherServlet6</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>dispatcher6</servlet-name>
+		<url-pattern>/dispatcher6</url-pattern>
+	</servlet-mapping>
+	<!-- DispatcherServlet6 끝 -->
+	
+	<!-- DispatcherServlet7 설정 -->
+	<servlet>
+		<servlet-name>dispatcher7</servlet-name>
+		<servlet-class>com.mycompany.web.servlet.DispatcherServlet7</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>dispatcher7</servlet-name>
+		<url-pattern>/dispatcher7</url-pattern>
+	</servlet-mapping>
+	<!-- DispatcherServlet7 끝 -->
+	
+	<!-- DispatcherServlet8 설정 -->
+	<servlet>
+		<servlet-name>dispatcher8</servlet-name>
+		<servlet-class>com.mycompany.web.servlet.DispatcherServlet8</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>dispatcher8</servlet-name>
+		<url-pattern>/dispatcher8</url-pattern>
+	</servlet-mapping>
+	<!-- DispatcherServlet8 끝 -->
 </web-app>
